--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">CountriesDemo</string>
+    <string name="country_details">%1$s, %2$s</string>
 </resources>
